<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_pemesanan_hotel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pemesanan_hotel"/>

    <Button
        android:id="@+id/btn_zera_hotel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zera_hotel"/>

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit"/>
</LinearLayout>